--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:backend": "nodemon index.js",
+    "start:frontend": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +43,6 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
